Update the logo, and the form fields

--- a/insights.html
+++ b/insights.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insights & Publications | SK Consultants</title>
+    <title>Insights & Publications | KB & Associates</title>
     <meta name="description"
-        content="Expert insights on economic development, TVET, and financial inclusion from SK Consultants.">
+        content="Expert insights on economic development, TVET, and financial inclusion from KB & Associates.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,9 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <a href="index.html" class="logo">SK <span class="logo-highlight">Consultants</span></a>
+            <a href="index.html" class="logo">
+                <img src="images/logo.jpg" alt="KB & Associates" style="height: 60px;">
+            </a>
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -34,10 +36,10 @@
                     <li class="dropdown">
                         <a href="services.html">Services <i class="fa-solid fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="services.html#pse">Private Sector Engagement</a></li>
-                            <li><a href="services.html#financial-inclusion">Financial Inclusion</a></li>
-                            <li><a href="services.html#tvet">Workforce Development</a></li>
-                            <li><a href="services.html#market-systems">Market Systems</a></li>
+                            <li><a href="services/enterprise-growth.html">Enterprise Growth</a></li>
+                            <li><a href="services/finance-investment.html">Access to Finance</a></li>
+                            <li><a href="services/market-access.html">Market Access</a></li>
+                            <li><a href="services/capacity-building.html">Capacity Building</a></li>
                         </ul>
                     </li>
                     <li><a href="insights.html" class="active">Insights</a></li>
@@ -145,7 +147,7 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
-                    <a href="index.html" class="logo text-white">SK <span class="logo-highlight">Consultants</span></a>
+                    <a href="index.html" class="logo text-white">KB <span class="logo-highlight">& Associates</span></a>
                     <p>Empowering economies. Enabling growth.</p>
                 </div>
                 <div class="footer-socials">
@@ -156,7 +158,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 SK Consultants. All rights reserved.</p>
+                <p>&copy; 2026 KB & Associates. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
