--- a/insights/derisking.html
+++ b/insights/derisking.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>De-risking Investment in East Africa | SK Consultants Insights</title>
+    <title>De-risking Investment in East Africa | KB & Associates Insights</title>
     <meta name="description"
         content="Strategies for catalyzing capital flow into emerging markets through innovative financial instruments.">
 
@@ -28,7 +28,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <a href="../index.html" class="logo">SK <span class="logo-highlight">Consultants</span></a>
+            <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 60px;"></a>
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="../index.html#about">About Firm</a></li>
@@ -101,7 +101,7 @@
                 we can crowd in private investors who would otherwise stay on the sidelines.</p>
 
             <h3>The Role of Data</h3>
-            <p>Often, the perceived risk is actually an information gap. SK Consultants is leveraging alternative data
+            <p>Often, the perceived risk is actually an information gap. KB & Associates is leveraging alternative data
                 scoring models to prove the creditworthiness of MSMEs, reducing the reliance on traditional collateral.
             </p>
 
@@ -150,7 +150,7 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
-                    <a href="#" class="logo text-white">SK <span class="logo-highlight">Consultants</span></a>
+                    <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 50px; background: white; padding: 5px; border-radius: 4px;"></a>
                     <p>Empowering economies. Enabling growth.</p>
                 </div>
                 <div class="footer-socials">
@@ -161,7 +161,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 SK Consultants. All rights reserved.</p>
+                <p>&copy; 2026 KB & Associates. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
