--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services | SK Consultants</title>
+    <title>Our Services | KB & Associates</title>
     <meta name="description"
         content="Explore our specialized consultancy services in Private Sector Engagement, Financial Inclusion, TVET, and Market Systems Development.">
 
@@ -26,18 +26,20 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <a href="index.html" class="logo">SK <span class="logo-highlight">Consultants</span></a>
+            <a href="index.html" class="logo">
+                <img src="images/logo.jpg" alt="KB & Associates" style="height: 60px;">
+            </a>
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#about">About Firm</a></li>
                     <li class="dropdown">
-                        <a href="services.html" class="active">Services <i class="fa-solid fa-chevron-down"></i></a>
+                        <a href="services.html">Services <i class="fa-solid fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="services.html#pse">Private Sector Engagement</a></li>
-                            <li><a href="services.html#financial-inclusion">Financial Inclusion</a></li>
-                            <li><a href="services.html#tvet">Workforce Development</a></li>
-                            <li><a href="services.html#market-systems">Market Systems</a></li>
+                            <li><a href="services/enterprise-growth.html">Enterprise Growth</a></li>
+                            <li><a href="services/finance-investment.html">Access to Finance</a></li>
+                            <li><a href="services/market-access.html">Market Access</a></li>
+                            <li><a href="services/capacity-building.html">Capacity Building</a></li>
                         </ul>
                     </li>
                     <li><a href="insights.html">Insights</a></li>
@@ -175,7 +177,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 SK Consultants. All rights reserved.</p>
+                <p>&copy; 2026 KB & Associates. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
