--- a/services/capacity-building.html
+++ b/services/capacity-building.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>The Future of TVET in Africa | KB & Associates Insights</title>
+    <title>Workforce Development (TVET) | KB & Associates</title>
     <meta name="description"
-        content="Exploring how Competency-Based Education and Training (CBET) is transforming youth employment in East Africa.">
+        content="We revolutionize vocational training by allowing curricula to real-time industry needs, ensuring employability and skill transfer.">
 
     <!-- Styles -->
     <link rel="stylesheet" href="../styles.css?v=3">
@@ -33,15 +33,15 @@
                 <ul class="nav-links">
                     <li><a href="../index.html#about">About Firm</a></li>
                     <li class="dropdown">
-                        <a href="../services.html">Services <i class="fa-solid fa-chevron-down"></i></a>
+                        <a href="../services.html" class="active">Services <i class="fa-solid fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="../services/pse.html">Private Sector Engagement</a></li>
-                            <li><a href="../services/financial-inclusion.html">Financial Inclusion</a></li>
-                            <li><a href="../services/tvet.html">Workforce Development</a></li>
-                            <li><a href="../services/market-systems.html">Market Systems</a></li>
+                            <li><a href="pse.html">Private Sector Engagement</a></li>
+                            <li><a href="financial-inclusion.html">Financial Inclusion</a></li>
+                            <li><a href="tvet.html">Workforce Development</a></li>
+                            <li><a href="market-systems.html">Market Systems</a></li>
                         </ul>
                     </li>
-                    <li><a href="../insights.html" class="active">Insights</a></li>
+                    <li><a href="../insights.html">Insights</a></li>
                     <li><a href="../index.html#impact">Our Impact</a></li>
                     <li><a href="../index.html#contact" class="btn btn-primary">Partner With Us</a></li>
                 </ul>
@@ -55,11 +55,10 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header" style="padding-top: 150px; padding-bottom: 50px; text-align: left;">
+    <section class="page-header">
         <div class="container">
-            <h1 style="font-size: 2.5rem; margin-bottom: 0.5rem;">The Future of TVET in Africa</h1>
-            <p style="margin: 0; text-align: left; opacity: 1;">Bridging the Skills Gap through Competency-Based
-                Education</p>
+            <h1>Capacity Building & Entrepreneurship Training</h1>
+            <p>Empowering the next generation of African business leaders.</p>
         </div>
     </section>
 
@@ -67,8 +66,8 @@
     <div class="breadcrumbs">
         <div class="container">
             <a href="../index.html">Home</a> <span>/</span>
-            <a href="../insights.html">Insights</a> <span>/</span>
-            <span class="breadcrumb-current">The Future of TVET</span>
+            <a href="../services.html">Services</a> <span>/</span>
+            <span class="breadcrumb-current">Capacity Building</span>
         </div>
     </div>
 
@@ -76,48 +75,33 @@
     <main class="page-layout container">
         <!-- Center Content -->
         <article class="page-content">
-            <a href="../insights.html" class="back-btn"><i class="fa-solid fa-arrow-left"></i> Back to Insights</a>
+            <h2 style="margin-top: 0;">Education for Employment</h2>
+            <p>Technical and Vocational Education and Training (TVET) is critical for reducing youth unemployment and
+                driving industrial growth. However, a disconnect often exists between what is taught in classrooms and
+                what is required on the factory floor.</p>
 
-            <div class="article-meta">
-                <span><i class="fa-regular fa-calendar"></i> October 24, 2025</span>
-                <span><i class="fa-solid fa-tag"></i> Workforce Development</span>
-                <span><i class="fa-solid fa-user"></i> Samuel Kablit</span>
-            </div>
+            <p>KB & Associates specializes in modernizing TVET systems. We facilitate deep collaboration between
+                educational institutions and private sector employers to co-create curricula that guarantee job
+                readiness.</p>
 
-            <div class="article-hero"
-                style="background-image: url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&q=80&w=1600');">
-            </div>
-
-            <h2 style="margin-top: 0;">Beyond the Classroom</h2>
-            <p>For decades, Technical and Vocational Education and Training (TVET) in Africa has struggled with a
-                perception problem. Often viewed as a second-tier option, it is now emerging as the most critical driver
-                of economic transformation in the region.</p>
-
-            <p>The dawn of the Fourth Industrial Revolution requires a workforce that is not just academically qualified
-                but technically competent. This is where <strong>Competency-Based Education and Training (CBET)</strong>
-                comes into play.</p>
-
-            <h3>The CBET Shift</h3>
-            <p>Unlike traditional models that focus on rote learning and time spent in class, CBET focuses on outcomes.
-                Can the student weld a joint to international standards? Can they code a mobile application that
-                functions? This shift forces institutions to align closely with the private sector.</p>
-
-            <blockquote>
-                "Industry must be in the classroom, and the classroom must be in the industry."
-            </blockquote>
-
-            <h3>Key Challenges & Opportunities</h3>
+            <h3>Our Solutions</h3>
             <ul>
-                <li><strong>Infrastructure:</strong> Many institutions lack modern equipment. Public-Private
-                    Partnerships are essential to bridge this gap.</li>
-                <li><strong>Curriculum Relevance:</strong> Rapid technological changes mean curricula must be updated
-                    dynamically, not decennially.</li>
-                <li><strong>Soft Skills:</strong> Employers increasingly value problem-solving and communication as much
-                    as technical prowess.</li>
+                <li><strong>Curriculum Development:</strong> Utilizing Competency-Based Education and Training (CBET)
+                    methodologies.</li>
+                <li><strong>Apprenticeship Models:</strong> Structuring dual-training systems where students learn while
+                    earning.</li>
+                <li><strong>Skills Gap Analysis:</strong> Conducting labor market assessments to identify high-demand
+                    sectors.</li>
+                <li><strong>Institutional Capacity Building:</strong> Training the trainers to deliver world-class
+                    instruction.</li>
             </ul>
 
-            <p>At KB & Associates, we are working with development partners to modernize TVET ecosystems, ensuring that
-                the youth bulge becomes a demographic dividend rather than a ticking time bomb.</p>
+            <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&q=80&w=1600"
+                alt="Technical Training" style="border-radius: 8px; margin: 2rem 0; width: 100%;">
+
+            <h3>Impact</h3>
+            <p>Our interventions have helped thousands of youth transition from education to meaningful employment,
+                reducing dependency and fostering economic independence.</p>
         </article>
 
         <!-- Sidebar -->
@@ -138,11 +122,12 @@
             </div>
 
             <div class="sidebar-widget">
-                <h3>Related Reads</h3>
+                <h3>Related Services</h3>
                 <ul class="sidebar-links">
-                    <li><a href="derisking.html">De-risking Investment <i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><a href="resilient-systems.html">Resilient Market Systems <i
+                    <li><a href="pse.html">Private Sector Engagement <i class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><a href="financial-inclusion.html">Financial Inclusion <i
                                 class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><a href="market-systems.html">Market Systems <i class="fa-solid fa-arrow-right"></i></a></li>
                 </ul>
             </div>
         </aside>
