--- a/services/enterprise-growth.html
+++ b/services/enterprise-growth.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Financial Inclusion | SK Consultants</title>
+    <title>Private Sector Engagement | KB & Associates</title>
     <meta name="description"
-        content="SK Consultants designs inclusive financial systems that expand access to capital for MSMEs and under-served populations.">
+        content="KB & Associates drives Private Sector Engagement by architecting high-impact partnerships that align business goals with development objectives.">
 
     <!-- Styles -->
     <link rel="stylesheet" href="../styles.css?v=3">
@@ -28,7 +28,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <a href="../index.html" class="logo">SK <span class="logo-highlight">Consultants</span></a>
+            <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 60px;"></a>
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="../index.html#about">About Firm</a></li>
@@ -54,21 +54,19 @@
         </div>
     </header>
 
-    <!-- Page Header -->
-    <section class="page-header" style="padding-top: 150px; padding-bottom: 50px; text-align: left;">
+    <!-- Page Header (Clean, Corporate) -->
+    <section class="page-header">
         <div class="container">
-            <h1 style="font-size: 3rem; margin-bottom: 0.5rem;">Financial Inclusion</h1>
-            <p style="margin: 0; text-align: left; opacity: 1;">Empowering communities through accessible financial
-                systems.</p>
+            <h1>Enterprise Growth & SME Development</h1>
+            <p>Scaling businesses through strategic planning and operational excellence.</p>
         </div>
     </section>
 
     <!-- Breadcrumbs -->
     <div class="breadcrumbs">
         <div class="container">
-            <a href="../index.html">Home</a> <span>/</span>
-            <a href="../services.html">Services</a> <span>/</span>
-            <span class="breadcrumb-current">Financial Inclusion</span>
+            <a href="../index.html">Home</a> <span>/</span> <a href="../services.html">Services</a> <span>/</span> <span
+                class="breadcrumb-current">Enterprise Growth</span>
         </div>
     </div>
 
@@ -76,34 +74,33 @@
     <main class="page-layout container">
         <!-- Center Content -->
         <article class="page-content">
-            <h2 style="margin-top: 0;">Access to Capital is a Right, Not a Privilege</h2>
-            <p>Financial inclusion is the bedrock of economic resilience. Our team works with financial institutions,
-                governments, and NGOs to design products and regulatory frameworks that reach the unbanked and
-                under-served.</p>
+            <h2 style="margin-top: 0;">Bridging the Gap Between Business & Development</h2>
+            <p>At KB & Associates, we believe the private sector is the engine of sustainable economic growth. We
+                architect high-impact partnerships between governments, donors, and private stakeholders to align market
+                forces with development objectives.</p>
 
-            <p>From mobile money integration to micro-insurance schemes, we deploy solutions that are scalable,
-                sustainable, and tailored to local contexts.</p>
+            <p>Our approach goes beyond traditional corporate social responsibility (CSR). We integrate development
+                goals into core business strategies, ensuring that social impact drives financial returns.</p>
 
-            <h3>Key Offerings</h3>
+            <h3>Core Capabilities</h3>
             <ul>
-                <li><strong>Product Design & Piloting:</strong> Creating customer-centric financial products for MSMEs,
-                    women, and youth.</li>
-                <li><strong>Financial Literacy Programs:</strong> Educating beneficiaries to make informed financial
-                    decisions and manage debt responsibly.</li>
-                <li><strong>Risk Mitigation:</strong> Developing credit scoring models and guarantee funds to de-risk
-                    lending to vulnerable sectors.</li>
-                <li><strong>Digital Transformation:</strong> Leveraging fintech to lower transaction costs and increase
-                    reach.</li>
+                <li><strong>Public-Private Partnerships (PPPs):</strong> Designing frameworks that share risk and reward
+                    between public entities and private investors.</li>
+                <li><strong>Resource Mobilization:</strong> Unlocking capital for impactful projects through blended
+                    finance and strategic investment.</li>
+                <li><strong>Workforce Alignment:</strong> Ensuring that private sector labor demands are met with
+                    skilled, job-ready talent.</li>
+                <li><strong>Policy Advocacy:</strong> Creating enabling environments where businesses can thrive and
+                    contribute to national development goals.</li>
             </ul>
 
-            <div style="background: #f8f9fa; padding: 2rem; border-left: 4px solid #00838F; margin: 2rem 0;">
-                <h4 style="margin-top: 0; color: #4F2D7F;">Case Study: Empowering Women Entrepreneurs</h4>
-                <p style="margin-bottom: 0;">We helped design a credit facility that unlocked over $2M in financing for
-                    women-led SMEs in rural Kenya, resulting in a 30% increase in household incomes.</p>
-            </div>
+            <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&q=80&w=1600"
+                alt="Business Meeting" style="border-radius: 8px; margin: 2rem 0; width: 100%;">
 
-            <p>Our work aligns with the UN Sustainable Development Goals (SDGs), specifically Goal 1 (No Poverty) and
-                Goal 8 (Decent Work and Economic Growth).</p>
+            <h3>Why Partner With Us?</h3>
+            <p>Our team brings over a decade of experience in navigating complex market environments across East Africa
+                and beyond. We understand the language of business and the metrics of development, allowing us to serve
+                as effective intermediaries and strategists.</p>
         </article>
 
         <!-- Sidebar -->
@@ -111,6 +108,7 @@
             <div class="sidebar-widget">
                 <h3>Key Contact</h3>
                 <div class="contact-card">
+                    <!-- Placeholder avatar -->
                     <div class="contact-avatar"
                         style="background: #4F2D7F; color: white; display: flex; align-items: center; justify-content: center; font-weight: bold;">
                         SK</div>
@@ -126,7 +124,8 @@
             <div class="sidebar-widget">
                 <h3>Related Services</h3>
                 <ul class="sidebar-links">
-                    <li><a href="pse.html">Private Sector Engagement <i class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><a href="financial-inclusion.html">Financial Inclusion <i
+                                class="fa-solid fa-arrow-right"></i></a></li>
                     <li><a href="tvet.html">Workforce Development <i class="fa-solid fa-arrow-right"></i></a></li>
                     <li><a href="market-systems.html">Market Systems <i class="fa-solid fa-arrow-right"></i></a></li>
                 </ul>
@@ -147,7 +146,7 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
-                    <a href="#" class="logo text-white">SK <span class="logo-highlight">Consultants</span></a>
+                    <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 50px; background: white; padding: 5px; border-radius: 4px;"></a>
                     <p>Empowering economies. Enabling growth.</p>
                 </div>
                 <div class="footer-socials">
@@ -158,7 +157,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 SK Consultants. All rights reserved.</p>
+                <p>&copy; 2026 KB & Associates. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
