--- a/services/finance-investment.html
+++ b/services/finance-investment.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>The Future of TVET in Africa | KB & Associates Insights</title>
+    <title>Financial Inclusion | KB & Associates</title>
     <meta name="description"
-        content="Exploring how Competency-Based Education and Training (CBET) is transforming youth employment in East Africa.">
+        content="KB & Associates designs inclusive financial systems that expand access to capital for MSMEs and under-served populations.">
 
     <!-- Styles -->
     <link rel="stylesheet" href="../styles.css?v=3">
@@ -33,15 +33,15 @@
                 <ul class="nav-links">
                     <li><a href="../index.html#about">About Firm</a></li>
                     <li class="dropdown">
-                        <a href="../services.html">Services <i class="fa-solid fa-chevron-down"></i></a>
+                        <a href="../services.html" class="active">Services <i class="fa-solid fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="../services/pse.html">Private Sector Engagement</a></li>
-                            <li><a href="../services/financial-inclusion.html">Financial Inclusion</a></li>
-                            <li><a href="../services/tvet.html">Workforce Development</a></li>
-                            <li><a href="../services/market-systems.html">Market Systems</a></li>
+                            <li><a href="pse.html">Private Sector Engagement</a></li>
+                            <li><a href="financial-inclusion.html">Financial Inclusion</a></li>
+                            <li><a href="tvet.html">Workforce Development</a></li>
+                            <li><a href="market-systems.html">Market Systems</a></li>
                         </ul>
                     </li>
-                    <li><a href="../insights.html" class="active">Insights</a></li>
+                    <li><a href="../insights.html">Insights</a></li>
                     <li><a href="../index.html#impact">Our Impact</a></li>
                     <li><a href="../index.html#contact" class="btn btn-primary">Partner With Us</a></li>
                 </ul>
@@ -55,11 +55,10 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header" style="padding-top: 150px; padding-bottom: 50px; text-align: left;">
+    <section class="page-header">
         <div class="container">
-            <h1 style="font-size: 2.5rem; margin-bottom: 0.5rem;">The Future of TVET in Africa</h1>
-            <p style="margin: 0; text-align: left; opacity: 1;">Bridging the Skills Gap through Competency-Based
-                Education</p>
+            <h1>Access to Finance & Investment Readiness</h1>
+            <p>Unlocking capital for growth through robust financial strategies.</p>
         </div>
     </section>
 
@@ -67,8 +66,8 @@
     <div class="breadcrumbs">
         <div class="container">
             <a href="../index.html">Home</a> <span>/</span>
-            <a href="../insights.html">Insights</a> <span>/</span>
-            <span class="breadcrumb-current">The Future of TVET</span>
+            <a href="../services.html">Services</a> <span>/</span>
+            <span class="breadcrumb-current">Access to Finance</span>
         </div>
     </div>
 
@@ -76,48 +75,34 @@
     <main class="page-layout container">
         <!-- Center Content -->
         <article class="page-content">
-            <a href="../insights.html" class="back-btn"><i class="fa-solid fa-arrow-left"></i> Back to Insights</a>
+            <h2 style="margin-top: 0;">Access to Capital is a Right, Not a Privilege</h2>
+            <p>Financial inclusion is the bedrock of economic resilience. Our team works with financial institutions,
+                governments, and NGOs to design products and regulatory frameworks that reach the unbanked and
+                under-served.</p>
 
-            <div class="article-meta">
-                <span><i class="fa-regular fa-calendar"></i> October 24, 2025</span>
-                <span><i class="fa-solid fa-tag"></i> Workforce Development</span>
-                <span><i class="fa-solid fa-user"></i> Samuel Kablit</span>
-            </div>
+            <p>From mobile money integration to micro-insurance schemes, we deploy solutions that are scalable,
+                sustainable, and tailored to local contexts.</p>
 
-            <div class="article-hero"
-                style="background-image: url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&q=80&w=1600');">
-            </div>
-
-            <h2 style="margin-top: 0;">Beyond the Classroom</h2>
-            <p>For decades, Technical and Vocational Education and Training (TVET) in Africa has struggled with a
-                perception problem. Often viewed as a second-tier option, it is now emerging as the most critical driver
-                of economic transformation in the region.</p>
-
-            <p>The dawn of the Fourth Industrial Revolution requires a workforce that is not just academically qualified
-                but technically competent. This is where <strong>Competency-Based Education and Training (CBET)</strong>
-                comes into play.</p>
-
-            <h3>The CBET Shift</h3>
-            <p>Unlike traditional models that focus on rote learning and time spent in class, CBET focuses on outcomes.
-                Can the student weld a joint to international standards? Can they code a mobile application that
-                functions? This shift forces institutions to align closely with the private sector.</p>
-
-            <blockquote>
-                "Industry must be in the classroom, and the classroom must be in the industry."
-            </blockquote>
-
-            <h3>Key Challenges & Opportunities</h3>
+            <h3>Key Offerings</h3>
             <ul>
-                <li><strong>Infrastructure:</strong> Many institutions lack modern equipment. Public-Private
-                    Partnerships are essential to bridge this gap.</li>
-                <li><strong>Curriculum Relevance:</strong> Rapid technological changes mean curricula must be updated
-                    dynamically, not decennially.</li>
-                <li><strong>Soft Skills:</strong> Employers increasingly value problem-solving and communication as much
-                    as technical prowess.</li>
+                <li><strong>Product Design & Piloting:</strong> Creating customer-centric financial products for MSMEs,
+                    women, and youth.</li>
+                <li><strong>Financial Literacy Programs:</strong> Educating beneficiaries to make informed financial
+                    decisions and manage debt responsibly.</li>
+                <li><strong>Risk Mitigation:</strong> Developing credit scoring models and guarantee funds to de-risk
+                    lending to vulnerable sectors.</li>
+                <li><strong>Digital Transformation:</strong> Leveraging fintech to lower transaction costs and increase
+                    reach.</li>
             </ul>
 
-            <p>At KB & Associates, we are working with development partners to modernize TVET ecosystems, ensuring that
-                the youth bulge becomes a demographic dividend rather than a ticking time bomb.</p>
+            <div style="background: #f8f9fa; padding: 2rem; border-left: 4px solid #00838F; margin: 2rem 0;">
+                <h4 style="margin-top: 0; color: #4F2D7F;">Case Study: Empowering Women Entrepreneurs</h4>
+                <p style="margin-bottom: 0;">We helped design a credit facility that unlocked over $2M in financing for
+                    women-led SMEs in rural Kenya, resulting in a 30% increase in household incomes.</p>
+            </div>
+
+            <p>Our work aligns with the UN Sustainable Development Goals (SDGs), specifically Goal 1 (No Poverty) and
+                Goal 8 (Decent Work and Economic Growth).</p>
         </article>
 
         <!-- Sidebar -->
@@ -138,11 +123,11 @@
             </div>
 
             <div class="sidebar-widget">
-                <h3>Related Reads</h3>
+                <h3>Related Services</h3>
                 <ul class="sidebar-links">
-                    <li><a href="derisking.html">De-risking Investment <i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><a href="resilient-systems.html">Resilient Market Systems <i
-                                class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><a href="pse.html">Private Sector Engagement <i class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><a href="tvet.html">Workforce Development <i class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><a href="market-systems.html">Market Systems <i class="fa-solid fa-arrow-right"></i></a></li>
                 </ul>
             </div>
         </aside>
