--- a/services/market-access.html
+++ b/services/market-access.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Market Systems Development | SK Consultants</title>
+    <title>Market Systems Development | KB & Associates</title>
     <meta name="description"
         content="Strengthening value chains to withstand economic shocks and fostering robust business networks that drive long-term sustainability.">
 
@@ -28,7 +28,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <a href="../index.html" class="logo">SK <span class="logo-highlight">Consultants</span></a>
+            <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 60px;"></a>
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="../index.html#about">About Firm</a></li>
@@ -55,20 +55,18 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header" style="padding-top: 150px; padding-bottom: 50px; text-align: left;">
+    <section class="page-header">
         <div class="container">
-            <h1 style="font-size: 3rem; margin-bottom: 0.5rem;">Market Systems Development</h1>
-            <p style="margin: 0; text-align: left; opacity: 1;">Building resilience in complex economic environments.
-            </p>
+            <h1>Market Access & Value Chain Development</h1>
+            <p>Creating resilient pathways to market for African producers.</p>
         </div>
     </section>
 
     <!-- Breadcrumbs -->
     <div class="breadcrumbs">
         <div class="container">
-            <a href="../index.html">Home</a> <span>/</span>
-            <a href="../services.html">Services</a> <span>/</span>
-            <span class="breadcrumb-current">Market Systems</span>
+            <a href="../index.html">Home</a> <span>/</span> <a href="../services.html">Services</a> <span>/</span> <span
+                class="breadcrumb-current">Market Access</span>
         </div>
     </div>
 
@@ -145,7 +143,7 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
-                    <a href="#" class="logo text-white">SK <span class="logo-highlight">Consultants</span></a>
+                    <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 50px; background: white; padding: 5px; border-radius: 4px;"></a>
                     <p>Empowering economies. Enabling growth.</p>
                 </div>
                 <div class="footer-socials">
@@ -156,7 +154,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 SK Consultants. All rights reserved.</p>
+                <p>&copy; 2026 KB & Associates. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
