--- a/services/organizational-development.html
+++ b/services/organizational-development.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Workforce Development (TVET) | SK Consultants</title>
+    <title>Private Sector Engagement | KB & Associates</title>
     <meta name="description"
-        content="We revolutionize vocational training by allowing curricula to real-time industry needs, ensuring employability and skill transfer.">
+        content="KB & Associates drives Private Sector Engagement by architecting high-impact partnerships that align business goals with development objectives.">
 
     <!-- Styles -->
     <link rel="stylesheet" href="../styles.css?v=3">
@@ -28,7 +28,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <a href="../index.html" class="logo">SK <span class="logo-highlight">Consultants</span></a>
+            <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 60px;"></a>
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="../index.html#about">About Firm</a></li>
@@ -54,11 +54,11 @@
         </div>
     </header>
 
-    <!-- Page Header -->
-    <section class="page-header" style="padding-top: 150px; padding-bottom: 50px; text-align: left;">
+    <!-- Page Header (Clean, Corporate) -->
+    <section class="page-header">
         <div class="container">
-            <h1 style="font-size: 3rem; margin-bottom: 0.5rem;">Workforce Development</h1>
-            <p style="margin: 0; text-align: left; opacity: 1;">Bridging the skills gap for the future of work.</p>
+            <h1>Organizational & Human Capital Development</h1>
+            <p>Investing in people and systems for long-term success.</p>
         </div>
     </section>
 
@@ -67,7 +67,7 @@
         <div class="container">
             <a href="../index.html">Home</a> <span>/</span>
             <a href="../services.html">Services</a> <span>/</span>
-            <span class="breadcrumb-current">TVET & Workforce Development</span>
+            <span class="breadcrumb-current">Organizational Development</span>
         </div>
     </div>
 
@@ -75,33 +75,33 @@
     <main class="page-layout container">
         <!-- Center Content -->
         <article class="page-content">
-            <h2 style="margin-top: 0;">Education for Employment</h2>
-            <p>Technical and Vocational Education and Training (TVET) is critical for reducing youth unemployment and
-                driving industrial growth. However, a disconnect often exists between what is taught in classrooms and
-                what is required on the factory floor.</p>
+            <h2 style="margin-top: 0;">Bridging the Gap Between Business & Development</h2>
+            <p>At KB & Associates, we believe the private sector is the engine of sustainable economic growth. We
+                architect high-impact partnerships between governments, donors, and private stakeholders to align market
+                forces with development objectives.</p>
 
-            <p>SK Consultants specializes in modernizing TVET systems. We facilitate deep collaboration between
-                educational institutions and private sector employers to co-create curricula that guarantee job
-                readiness.</p>
+            <p>Our approach goes beyond traditional corporate social responsibility (CSR). We integrate development
+                goals into core business strategies, ensuring that social impact drives financial returns.</p>
 
-            <h3>Our Solutions</h3>
+            <h3>Core Capabilities</h3>
             <ul>
-                <li><strong>Curriculum Development:</strong> Utilizing Competency-Based Education and Training (CBET)
-                    methodologies.</li>
-                <li><strong>Apprenticeship Models:</strong> Structuring dual-training systems where students learn while
-                    earning.</li>
-                <li><strong>Skills Gap Analysis:</strong> Conducting labor market assessments to identify high-demand
-                    sectors.</li>
-                <li><strong>Institutional Capacity Building:</strong> Training the trainers to deliver world-class
-                    instruction.</li>
+                <li><strong>Public-Private Partnerships (PPPs):</strong> Designing frameworks that share risk and reward
+                    between public entities and private investors.</li>
+                <li><strong>Resource Mobilization:</strong> Unlocking capital for impactful projects through blended
+                    finance and strategic investment.</li>
+                <li><strong>Workforce Alignment:</strong> Ensuring that private sector labor demands are met with
+                    skilled, job-ready talent.</li>
+                <li><strong>Policy Advocacy:</strong> Creating enabling environments where businesses can thrive and
+                    contribute to national development goals.</li>
             </ul>
 
-            <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&q=80&w=1600"
-                alt="Technical Training" style="border-radius: 8px; margin: 2rem 0; width: 100%;">
+            <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&q=80&w=1600"
+                alt="Business Meeting" style="border-radius: 8px; margin: 2rem 0; width: 100%;">
 
-            <h3>Impact</h3>
-            <p>Our interventions have helped thousands of youth transition from education to meaningful employment,
-                reducing dependency and fostering economic independence.</p>
+            <h3>Why Partner With Us?</h3>
+            <p>Our team brings over a decade of experience in navigating complex market environments across East Africa
+                and beyond. We understand the language of business and the metrics of development, allowing us to serve
+                as effective intermediaries and strategists.</p>
         </article>
 
         <!-- Sidebar -->
@@ -109,6 +109,7 @@
             <div class="sidebar-widget">
                 <h3>Key Contact</h3>
                 <div class="contact-card">
+                    <!-- Placeholder avatar -->
                     <div class="contact-avatar"
                         style="background: #4F2D7F; color: white; display: flex; align-items: center; justify-content: center; font-weight: bold;">
                         SK</div>
@@ -124,9 +125,9 @@
             <div class="sidebar-widget">
                 <h3>Related Services</h3>
                 <ul class="sidebar-links">
-                    <li><a href="pse.html">Private Sector Engagement <i class="fa-solid fa-arrow-right"></i></a></li>
                     <li><a href="financial-inclusion.html">Financial Inclusion <i
                                 class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><a href="tvet.html">Workforce Development <i class="fa-solid fa-arrow-right"></i></a></li>
                     <li><a href="market-systems.html">Market Systems <i class="fa-solid fa-arrow-right"></i></a></li>
                 </ul>
             </div>
@@ -146,7 +147,7 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
-                    <a href="#" class="logo text-white">SK <span class="logo-highlight">Consultants</span></a>
+                    <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 50px; background: white; padding: 5px; border-radius: 4px;"></a>
                     <p>Empowering economies. Enabling growth.</p>
                 </div>
                 <div class="footer-socials">
@@ -157,7 +158,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 SK Consultants. All rights reserved.</p>
+                <p>&copy; 2026 KB & Associates. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
