--- a/services/program-design.html
+++ b/services/program-design.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Private Sector Engagement | SK Consultants</title>
+    <title>Private Sector Engagement | KB & Associates</title>
     <meta name="description"
-        content="SK Consultants drives Private Sector Engagement by architecting high-impact partnerships that align business goals with development objectives.">
+        content="KB & Associates drives Private Sector Engagement by architecting high-impact partnerships that align business goals with development objectives.">
 
     <!-- Styles -->
     <link rel="stylesheet" href="../styles.css?v=3">
@@ -28,7 +28,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <a href="../index.html" class="logo">SK <span class="logo-highlight">Consultants</span></a>
+            <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 60px;"></a>
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="../index.html#about">About Firm</a></li>
@@ -55,11 +55,10 @@
     </header>
 
     <!-- Page Header (Clean, Corporate) -->
-    <section class="page-header" style="padding-top: 150px; padding-bottom: 50px; text-align: left;">
+    <section class="page-header">
         <div class="container">
-            <h1 style="font-size: 3rem; margin-bottom: 0.5rem;">Private Sector Engagement</h1>
-            <p style="margin: 0; text-align: left; opacity: 1;">Driving sustainable growth through strategic
-                partnerships.</p>
+            <h1>Program Design, Delivery & Advisory Services</h1>
+            <p>Seamless execution of high-impact development programs.</p>
         </div>
     </section>
 
@@ -68,7 +67,7 @@
         <div class="container">
             <a href="../index.html">Home</a> <span>/</span>
             <a href="../services.html">Services</a> <span>/</span>
-            <span class="breadcrumb-current">Private Sector Engagement</span>
+            <span class="breadcrumb-current">Program Design</span>
         </div>
     </div>
 
@@ -77,7 +76,7 @@
         <!-- Center Content -->
         <article class="page-content">
             <h2 style="margin-top: 0;">Bridging the Gap Between Business & Development</h2>
-            <p>At SK Consultants, we believe the private sector is the engine of sustainable economic growth. We
+            <p>At KB & Associates, we believe the private sector is the engine of sustainable economic growth. We
                 architect high-impact partnerships between governments, donors, and private stakeholders to align market
                 forces with development objectives.</p>
 
@@ -148,7 +147,7 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
-                    <a href="#" class="logo text-white">SK <span class="logo-highlight">Consultants</span></a>
+                    <a href="../index.html" class="logo"><img src="../images/logo.jpg" alt="KB & Associates" style="height: 50px; background: white; padding: 5px; border-radius: 4px;"></a>
                     <p>Empowering economies. Enabling growth.</p>
                 </div>
                 <div class="footer-socials">
@@ -159,7 +158,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 SK Consultants. All rights reserved.</p>
+                <p>&copy; 2026 KB & Associates. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
